syntax = "proto3";

package payment.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/payment/v1;pmpb";

enum DiscountType {
  DISCOUNT_TYPE_NONE = 0;
  DISCOUNT_TYPE_REGULAR = 1;
  DISCOUNT_TYPE_COMBO = 2;
  DISCOUNT_TYPE_SIBLING = 3;
  DISCOUNT_TYPE_EMPLOYEE_FULL_TIME = 4;
  DISCOUNT_TYPE_EMPLOYEE_PART_TIME = 5;
  DISCOUNT_TYPE_SINGLE_PARENT = 6;
  DISCOUNT_TYPE_FAMILY = 7;
  DISCOUNT_TYPE_CAMPAIGN = 8;
}

enum DiscountAmountType {
  DISCOUNT_AMOUNT_TYPE_NONE = 0;
  DISCOUNT_AMOUNT_TYPE_PERCENTAGE = 1;
  DISCOUNT_AMOUNT_TYPE_FIXED_AMOUNT = 2;
}

enum ProductType {
  PRODUCT_TYPE_NONE = 0;
  PRODUCT_TYPE_PACKAGE = 1;
  PRODUCT_TYPE_MATERIAL = 2;
  PRODUCT_TYPE_FEE = 3;
}

enum ProductAssociatedDataType {
  PRODUCT_ASSOCIATED_DATA_TYPE_NONE = 0;
  PRODUCT_ASSOCIATED_DATA_TYPE_COURSE = 1;
  PRODUCT_ASSOCIATED_DATA_TYPE_LOCATION = 2;
  PRODUCT_ASSOCIATED_DATA_TYPE_GRADE = 3;
  PRODUCT_ASSOCIATED_DATA_TYPE_ACCOUNTING_CATEGORY = 4;
  PRODUCT_ASSOCIATED_DATA_TYPE_DISCOUNT = 5;
}

enum AssociatedProductsType {
  ASSOCIATED_PRODUCTS_NONE = 0;
  ASSOCIATED_PRODUCTS_MATERIAL = 1;
  ASSOCIATED_PRODUCTS_FEE = 2;
}

enum TaxCategory {
  TAX_CATEGORY_NONE = 0;
  TAX_CATEGORY_INCLUSIVE = 1;
  TAX_CATEGORY_EXCLUSIVE = 2;
}

enum PackageType {
  PACKAGE_TYPE_NONE = 0;
  PACKAGE_TYPE_ONE_TIME = 1;
  PACKAGE_TYPE_SLOT_BASED = 2;
  PACKAGE_TYPE_FREQUENCY = 3;
  PACKAGE_TYPE_SCHEDULED = 4;
}

enum MaterialType {
  MATERIAL_TYPE_NONE = 0;
  MATERIAL_TYPE_ONE_TIME = 1;
  MATERIAL_TYPE_RECURRING = 2;
}

enum FeeType {
  FEE_TYPE_NONE = 0;
  FEE_TYPE_ONE_TIME = 1;
  FEE_TYPE_RECURRING = 2;
}

enum LeavingReasonType {
  LEAVING_REASON_TYPE_NONE = 0;
  LEAVING_REASON_TYPE_WITHDRAWAL = 1;
  LEAVING_REASON_TYPE_GRADUATE = 2;
  LEAVING_REASON_TYPE_LOA = 3;
}

enum OrderType {
  ORDER_TYPE_NEW = 0;
  ORDER_TYPE_ENROLLMENT = 1;
  ORDER_TYPE_UPDATE = 2;
  ORDER_TYPE_WITHDRAWAL = 3;
  ORDER_TYPE_CUSTOM_BILLING = 4;
  ORDER_TYPE_PAUSE = 5 [deprecated = true];
  ORDER_TYPE_GRADUATE = 6;
  ORDER_TYPE_RESUME = 7;
  ORDER_TYPE_LOA = 8;
}

enum OrderStatus {
  ORDER_STATUS_ALL = 0;
  ORDER_STATUS_SUBMITTED = 1;
  ORDER_STATUS_PENDING = 2;
  ORDER_STATUS_REJECTED = 3;
  ORDER_STATUS_VOIDED = 4;
  ORDER_STATUS_INVOICED = 5;
}

enum BillingStatus {
  BILLING_STATUS_WAITING_APPROVAL = 0;
  BILLING_STATUS_PENDING = 1;
  BILLING_STATUS_BILLED = 2;
  BILLING_STATUS_INVOICED = 3;
  BILLING_STATUS_CANCELLED = 4;
}

enum BillingType {
  BILLING_TYPE_BILLED_AT_ORDER = 0;
  BILLING_TYPE_UPCOMING_BILLING = 1;
  BILLING_TYPE_ADJUSTMENT_BILLING = 2;
}

enum OrderActionStatus {
  ORDER_ACTION_SUBMITTED = 0;
  ORDER_ACTION_VOIDED = 1;
}

enum QuantityType {
    QUANTITY_TYPE_NONE = 0;
    QUANTITY_TYPE_COURSE_WEIGHT = 1;
    QUANTITY_TYPE_SLOT = 2;
    QUANTITY_TYPE_SLOT_PER_WEEK = 3;
}

enum BillingItemType {
  ONE_TIME_MATERIAL = 0;
  ONE_TIME_FEE = 1;
  ONE_TIME_PACKAGE = 2;
  RECURRING_MATERIAL = 3;
  RECURRING_FEE = 4;
  RECURRING_PACKAGE = 5;
}

enum StudentProductStatus {
  PENDING = 0;
  ORDERED = 1;
  CANCELLED = 2;
}

enum StudentProductLabel {
  CREATED = 0;
  UPDATED = 1;
  UPDATE_SCHEDULED = 2;
  WITHDRAWAL_SCHEDULED = 3;
  GRADUATION_SCHEDULED = 4;
  PAUSE_SCHEDULED = 5;
  PAUSED = 6;
}

enum ReviewedFlag {
  NOT_REVIEWED = 0;
  REVIEWED = 1;
}

enum FileName {
  ENROLLMENT = 0;
}

enum FileType {
  PDF = 0;
}

enum ExportMasterDataType {
  EXPORT_ACCOUNTING_CATEGORY = 0;
  EXPORT_ASSOCIATED_PRODUCTS_FEE = 1;
  EXPORT_ASSOCIATED_PRODUCTS_MATERIAL = 2;
  EXPORT_BILLING_RATIO = 3;
  EXPORT_BILLING_SCHEDULE = 4;
  EXPORT_BILLING_SCHEDULE_PERIOD = 5;
  EXPORT_DISCOUNT = 6;
  EXPORT_FEE = 7;
  EXPORT_LEAVING_REASON = 8;
  EXPORT_MATERIAL = 9;
  EXPORT_TAX = 10;
  EXPORT_PRODUCT_SETTING = 11;
  EXPORT_PRODUCT_PRICE = 12;
  EXPORT_PRODUCT_DISCOUNT = 13;
  EXPORT_PRODUCT_ASSOCIATED_LOCATION = 14;
  EXPORT_PRODUCT_ASSOCIATED_GRADE = 15;
  EXPORT_PRODUCT_ASSOCIATED_ACCOUNTING_CATEGORY = 16;
  EXPORT_PACKAGE_QUANTITY_TYPE_MAPPING = 17;
  EXPORT_PACKAGE_ASSOCIATED_COURSE = 18;
  EXPORT_PACKAGE = 19;
  EXPORT_NOTIFICATION_DATE = 20;
}

enum ProductStatus {
  PRODUCT_STATUS_ALL = 0;
  PRODUCT_STATUS_ACTIVE = 1;
  PRODUCT_STATUS_INACTIVE = 2;
}

enum ProductPriceType {
  DEFAULT_PRICE = 0;
  ENROLLED_PRICE = 1;
}

enum ProductTags {
  PRODUCT_TAG_NONE = 0;
  PRODUCT_TAG_TRIAL = 1;
  PRODUCT_TAG_SEASONAL = 2;
  PRODUCT_TAG_EXAMINATION = 3;
}

enum StudentPackageActions {
  STUDENT_PACKAGE_ACTION_INSERT = 0;
  STUDENT_PACKAGE_ACTION_UPDATE = 1;
  STUDENT_PACKAGE_ACTION_UPSERT = 2;
  STUDENT_PACKAGE_ACTION_CANCELED = 3;
}
